@@ -8,3 +8,5 @@ Emmanuelle Laprise (emmmanuelle.laprise@bluekazoo.ca)
 Federico Maguolo (maguolof@dei.unipd.it)
 George F. Riley (riley@ece.gatech.edu)
 Guillaume Vu-Brugier (gvubrugier@gmail.com)
+Florian Westphal (fw@strlen.de)
+
